--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.9.0",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/vue-fontawesome": "^0.1.6",
+    "@nuxtjs/axios": "^5.5.4",
+    "@nuxtjs/toast": "^3.2.1",
     "nuxt": "^2.0.0",
     "nuxt-fontawesome": "^0.4.0"
   },
